# todolist-messenger

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-telegram.yaml  docker-compose.yml  entrypoint.sh  main.py  main_telegram.py  pyproject.toml  telegram_app.py
alembic/: env.py
alembic/versions/: 299f134bc18e_init_models.py  adb69e28469f_fix_task_fk.py
tests/: conftest.py  test_string_manipulation.py  test_web.py
tests/mock/: request_mock.py
todolist/: app.py  db.py  logger.py  middlewares.py  routes.py  settings.py
todolist/command_files/: add_todo.py  close_todo.py  echo.py  help.py  register.py  todo_list.py
todolist/components/: builder.py  interactive.py  simple.py
todolist/drivers/: dto.py
todolist/drivers/telegram/: handler.py
todolist/handlers/: __init__.py  cammand_handler.py  command_handler.py  common.py  dialog.py  dialog_handler.py  typical.py
todolist/models/: __init__.py  base.py  command.py  messenger.py  task.py  user.py
todolist/repositories/: base_repository.py  command_repository.py  task_repository.py  user_repository.py
todolist/utils/: __init__.py  morph_analyzer.py  normalize_keywords.py  seeds.py  string_manipulation.py
todolist/views/: index.py
